Fixing an overflow issue with the header.

--- a/css/widgets.less
+++ b/css/widgets.less
@@ -396,6 +396,12 @@ label, .contactform label, .advancedcontactform label {
         }
     }
     .slideshow-widget {
+			.btn-prev,
+			.btn-next {
+				top: 50%;
+				margin-top: -22px;
+			}
+			
     		.btns-move {
 			.btn-prev {
 				left:0;
@@ -408,6 +414,7 @@ label, .contactform label, .advancedcontactform label {
     				padding:10px 20px;
     			}
 			}
+			
 			.btn-next {
 				right:0;
 				background: @color-swatch1;
@@ -425,6 +432,7 @@ label, .contactform label, .advancedcontactform label {
         .btn-next {
             text-indent: -99999px;
         }
+        
         .btn-prev {
             &:after {
                 content: "\3008";
@@ -434,6 +442,7 @@ label, .contactform label, .advancedcontactform label {
 				left: -10px;
             }
         }
+        
         .btn-next {
             &:after {
                 content: "\3009";
@@ -444,12 +453,14 @@ label, .contactform label, .advancedcontactform label {
                 width:0;
             }
         }
+        
         /* Play Button */
         .btn-play {
             background: rgba(0,0,0,0.5);
             -webkit-border-radius: 4px;
             -moz-border-radius: 4px;
             border-radius: 4px;
+            
             &:after {
                 color: #fff;
                 letter-spacing: -4px;
